@@ -10,21 +10,25 @@ void Generator::interactiveLex(ostream &out) const
     std::string const &name = d_options.className();
 
     out << 
-        "int " << name << "::" << d_options.lexFunctionName() << "()\n"
+        "bool " << d_baseclassScope << "interactiveLine__()\n"
         "{\n"
-        "    if (lex__() != 0)\n"
-        "        return d_token__;\n"
-        "\n"
         "    std::string line;\n"
         "\n"
-        "    if (d_in__ == 0 || not std::getline(*d_in__, line))\n"
-        "        return 0;\n"
+        "    if (not std::getline(*d_in, line))\n"
+        "        return false;\n"
         "\n"
         "    line += '\\n';\n"
-        "    clear();\n"
-        "    str(line);\n"
-        "    switchStream__(*this);\n"
+        "    d_line->clear();\n"
+        "    d_line->str(line);\n"
+        "    switchStream__(*d_line);\n"
         "\n"
-        "    return lex__();\n"
+        "    return true;\n"
+        "}\n"
+        "\n"
+        "int " << name << "::" << d_options.lexFunctionName() << "()\n"
+        "{\n"
+        "    return lex__() != 0        ? d_token__ :\n"
+        "           interactiveLine__() ? lex__()   :\n"
+        "                                 0;\n"
         "}\n";
 }
